[gd_scene load_steps=8 format=2]

[ext_resource path="res://death screen.gd" type="Script" id=1]
[ext_resource path="res://joystix monospace.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.352941, 0.117647, 0.117647, 1 )
corner_detail = 20

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="death screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 252.0
margin_bottom = 148.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 248.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1

[node name="label" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 248.0
margin_bottom = 50.0

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/label"]
margin_left = 78.0
margin_right = 169.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "Points:"

[node name="Buttons" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 248.0
margin_bottom = 122.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Buttons"]
margin_left = 72.0
margin_right = 175.0
margin_bottom = 62.0
custom_constants/separation = 10

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer/Buttons/VBoxContainer"]
margin_right = 103.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
button_mask = 3
text = "Restart"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer/Buttons/VBoxContainer"]
margin_top = 36.0
margin_right = 103.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 5 )
button_mask = 3
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/VBoxContainer/quit" to="." method="_on_quit_pressed"]
